--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,13 @@
 Content:
 
  1 - General
- 2 - Home
- 3 - Navigation
- 4 - Protfolio
- 5 - About Boxes
- 6 - Our Team
- 7 - Blog
- 8 - Contact
+ 2 - Index
+ 3 - Protfolio
+ 4 - About
+ 5 - Team
+ 6 - Blog
+ 7 - Contact
+ 8 - Footer
 */
 
 /*===================================================================================*/
@@ -362,7 +362,7 @@ a.mobile-menu{
 }
 
 /*===================================================================================*/
-/*  								4 - Protfolios                                   */
+/*  								3 - Protfolios                                   */
 /*===================================================================================*/
 
 #protfolio{
@@ -583,7 +583,7 @@ a.mobile-menu{
 }
 
 /*===================================================================================*/
-/*  								5 - About Boxes                                  */
+/*  								4 - About Boxes                                  */
 /*===================================================================================*/
 
 #about{
@@ -617,7 +617,7 @@ a.mobile-menu{
 	background: rgba(242,242,242,1);
 	}
 
-.bubble_container img{
+.bubble_container img,.bubble_container i{
 	display: block;
 	font-size: 5.5em;
 	color: #FFA300;
@@ -628,7 +628,7 @@ a.mobile-menu{
 	width: 100%;	
 }
 
-.bubble_container img:hover {
+.bubble_container img:hover,.bubble_container i:hover {
 	display: block;
 	font-size: 5.5em;
 	color: #FFF;
@@ -679,7 +679,7 @@ a.mobile-menu{
     color:#FFA300;
 }
 /*===================================================================================*/
-/*  								6 - Our Team                                     */
+/*  								5 - Team                                         */
 /*===================================================================================*/
 
 
@@ -815,22 +815,6 @@ a.mobile-menu{
 	line-height:28px;
 }
 
-
-@media screen and (max-width: 31.5em) {
-	.logo p{
-    font-size: 28px;
-    padding: 10px;
-	}
-	.grid {
-		padding: 0;
-	}
-	.grid li {
-		width: 100%;
-		min-width: 300px;
-	}
-}
-
-
 section#team{
 	background:#fff;
 }
@@ -941,7 +925,7 @@ section#team{
 }
 
 /*===================================================================================*/
-/*  								7 - Blog                                         */
+/*  								6 - Blog                                         */
 /*===================================================================================*/
 
 #blog{
@@ -1003,7 +987,7 @@ section#team{
 
 
 /*===================================================================================*/
-/*  								8 - Contact                                       */
+/*  								7 - Contact                                       */
 /*===================================================================================*/
 #contact{
 	width:100%;
@@ -1141,7 +1125,7 @@ section#team{
 
 
 /*===================================================================================*/
-/*  								9 - Footer                                       */
+/*  								8 - Footer                                       */
 /*===================================================================================*/
 
 #footer{
