--- a/css/responsive.css
+++ b/css/responsive.css
@@ -130,7 +130,9 @@ Website: http://zmedia.ir
 .description{
 	width:95%;
 }
-
+.contact-form{
+	padding: 30px 20px;
+}
 }
 
 @media only screen and (max-width: 480px){
